--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="myweb.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script defer src="myweb1.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../css/myweb.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <script defer src="../js/myweb1.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-rwdImageMaps/1.6/jquery.rwdImageMaps.min.js"></script>
     <script src="https://kit.fontawesome.com/246f2b2141.js" crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
     <header>
       <!-- 헤더 -->
       <div class="log">
-        <img src="로고.png" />
+        <img src="../img/로고.png" />
       </div>
       <br /><br /><br />
     </header>
@@ -43,7 +43,7 @@
       <br>
       <!-- 메인이미지 -->
       <div class="main">
-        <img src="main.png" usemap="#mainImg">
+        <img src="../img/main.png" usemap="#mainImg">
         <map name="mainImg" id="mainImg">
         <area shape="circle" coords="743, 156, 40" href="index2.html">
         </map>
@@ -54,7 +54,7 @@
       <!-- 푸터 -->
       <hr />
       <div id="logoi">
-        <img src="logo.png" id="logo" />
+        <img src="../img/logo.png" id="logo" />
       </div>
       <br><br>
       <div id="info">개인정보     처리방침       문자중계      고객질문      사이트맵</div>
@@ -65,8 +65,8 @@
         <br><br>
       </div>
       <div id="social">
-        <img src="insta.png" width="33" height="33" alt="insta" />
-        <img src="twitter.png" width="33" height="34" alt="Twitter" />
+        <img src="../img/insta.png" width="33" height="33" alt="insta" />
+        <img src="../img/twitter.png" width="33" height="34" alt="Twitter" />
       </div>
     </footer>
   </body>
