--- a/html/index3.html
+++ b/html/index3.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="myweb3.css">
+  <link rel="stylesheet" href="../css/myweb3.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="myweb3.js" type="text/javascript"></script>
+  <script src="../js/myweb3.js" type="text/javascript"></script>
   <script src="https://kit.fontawesome.com/246f2b2141.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqQ8Fn5k9JfqdjbmEeXCJWO6MPIgErq7E&callback=myMap" async defer></script>
