--- a/html/index2.html
+++ b/html/index2.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="myweb2.css">
-    <script defer src="myweb2.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../css/myweb2.css">
+    <script defer src="../js/myweb2.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/246f2b2141.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
           </a>
         </div>
         <ul class="navbar_menu">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../img/index.html">Home</a></li>
           <li><a href="#about">About</a></li>
         </ul>
         <ul class="navbar_icons">
@@ -34,7 +34,7 @@
     <header>
       <!-- 헤더 -->
       <div class="log">
-        <img src="로고.png">
+        <img src="../img/로고.png">
       </div>
       <br><br><br>
     </header>
@@ -103,7 +103,7 @@
         </div>
         <div class="column in">
           <div class="content">
-            <img src="https://scontent-gmp1-1.xx.fbcdn.net/v/t1.6435-9/52918015_1243347465841731_6767010292434993152_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_ohc=_PaFsrX7ycYQ7kNvgFCxwMg&_nc_ht=scontent-gmp1-1.xx&oh=00_AYD8ZVIATrkLTzMIWtwtccwlyQ9SRHTyGa2CdgFwOUptaA&oe=666A341C" alt="in" style="width:300px; height:300px">
+            <img src="https://mblogthumb-phinf.pstatic.net/MjAyNDAxMTZfNCAg/MDAxNzA1Mzc2NjQ3NTc3.1wwopjZEXH_MaiNsYTSoOrScSxj233AnQhKJeHqi5o4g.w-bNTVWsEANtDx0GXobIEZVU--58-8kdJttzHLP9IzIg.JPEG.wtgs1004/1705287475431.jpg?type=w800" alt="in" style="width:300px; height:300px">
             <h3>수내닭꼬치</h3>
           </div>
         </div>
@@ -177,7 +177,7 @@
           <!-- 푸터 -->
           <hr/>
           <div id="logoi">
-            <img src="logo.png" id="logo" />
+            <img src="../img/logo.png" id="logo" />
           </div>
           <br><br>
           <div id="info">개인정보 처리방침        문자중계        고객질문        사이트맵</div>
@@ -188,8 +188,8 @@
             <br><br>
           </div>
           <div id="social">
-            <img src="insta.png" width="33" height="33" alt="insta" />
-            <img src="twitter.png" width="33" height="34" alt="Twitter" />
+            <img src="../img/insta.png" width="33" height="33" alt="insta" />
+            <img src="../img/twitter.png" width="33" height="34" alt="Twitter" />
           </div>
         </footer>
   </div>
