--- a/html/index4.html
+++ b/html/index4.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="myweb4.css">
+  <link rel="stylesheet" href="../css/myweb4.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="myweb4.js" type="text/javascript"></script>
+  <script src="../js/myweb4.js" type="text/javascript"></script>
   <script src="https://kit.fontawesome.com/246f2b2141.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <title>로그인/회원가입</title>
@@ -30,7 +30,7 @@
     </div>
       <!-- 헤더 -->
       <div class="log">
-        <img src="로고.png">
+        <img src="../img/로고.png">
       </div>
       <br><br><br>
   </header>
@@ -53,7 +53,7 @@
       <!-- 푸터 -->
       <hr />
       <div id="logoi">
-        <img src="logo.png" id="logo" />
+        <img src="../img/logo.png" id="logo" />
       </div>
       <br><br>
       <div id="info">개인정보     처리방침       문자중계      고객질문      사이트맵</div>
@@ -64,8 +64,8 @@
         <br><br>
       </div>
       <div id="social">
-        <img src="insta.png" width="33" height="33" alt="insta" />
-        <img src="twitter.png" width="33" height="34" alt="Twitter" />
+        <img src="../img/insta.png" width="33" height="33" alt="insta" />
+        <img src="../img/twitter.png" width="33" height="34" alt="Twitter" />
       </div>
     </footer>
 </body>
